# ooh-media-chatbot

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  IMPLEMENTATION-PLAN.md  README.md  app.py  mcp_server.py  orchestrate.py  pyproject.toml
backlog/: US-01.md  US-02.md  US-03.md  US-04.md  US-05.md  US-06.md  US-07.md
core/: assistant.py  embeddings.py  ingest.py  llm.py  prices.py  retrieval.py  schema.py
data/pdfs/: SOURCES.md
scripts/: bootstrap.sh  preflight.py  verify_us05.py
tests/: test_assistant.py  test_ingest.py  test_prices.py  test_retrieval.py
