[project]
name = "ooh-media-chatbot"
version = "0.1.0"
description = "oOh!media Investor Chat — grounded RAG over public investor materials"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic==0.92.0",
    "chromadb==1.5.7",
    "httpx==0.28.1",
    "openai==2.31.0",
    "python-dotenv==1.2.2",
]
